feat: add path and buffer completion

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -1,6 +1,6 @@
 {
     "name": "custom-snippets",
-    "author": "edrkd",
+    "author": "edr3x",
     "engines": {
         "vscode": "^1.11.0"
     },
