--- a/stylua.toml
+++ b/stylua.toml
@@ -1,3 +1,6 @@
 indent_type = "Spaces"
-indent_width = 2
+line_endings = "Unix"
+indent_width = 4
 column_width = 120
+quote_style = "AutoPreferDouble"
+call_parentheses = "Always"
